--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -56,7 +56,7 @@ li {
     z-index: 0;
     background-color: #FAFAFA;
     border: 1px solid #DDDDDD;
-    border-radius: 4px;
+    border-radius: 0px 0px 4px 4px;
     margin-top: 16.8px;
     margin-bottom: 0px;
     padding: 30px;
